
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int SEEK_SET ;
 int fclose (int *) ;
 int feof (int *) ;
 int * fopen (char*,char*) ;
 int fseek (int *,int ,int ) ;
 char getc (int *) ;

char *oku(char *FilePath)
{

      FILE *di;
      char cr;

      int i=0;
      char Feature[500];

      if( (di=fopen(FilePath,"rb")) == ((void*)0) )
              return "";

      fseek(di,0,SEEK_SET);

      while(!feof(di))
      {
              cr=getc(di);
              if(cr == ',') break;

              Feature[i] = cr;
              i++;
      }

      Feature[i] = '\0';
      fclose(di);
      return Feature;
}
